<resources>
    <string name="app_name">CS4084MobileAppDevelopment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="view_map">View Map</string>
    <string name="create_post">Create Post</string>
    <string name="upvote_button_description">Upvote</string>
    <string name="downvote_button_description">Upvote</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categories">
        <item>General</item>
        <item>Traffic alert</item>
        <item>Question</item>
        <item>Event</item>
        <item>Safety notice</item>
        <item>Volunteer Opportunity</item>
    </string-array>

</resources>